# Python_ETL

./: README.md  pyproject.toml
pyetl/: ETL.py  Extract.py  Load.py  Load_datalake.py  Solicitações_SQL_Economistas.sql  Transform.py  airflow_etl.py
pyetl/Tabelas/: Tabela_BR.csv  Tabela_CE.csv  Tabela_NE.csv
pyetl/airflow/: ETL_2019.py  ETL_2020.py  ETL_2021.py
pyetl/utils/: datalake_db.py  export_db.py  scraping..py  scraping.py  scraping_Qlik.py
tests/: test_pyetl.py
