[tool.poetry]
name = "PyETL"
version = "0.1.0"
description = ""
authors = ["Luiz_Alexandre21 <luizalexandre21@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.2.1"
requests = "^2.27.1"
peewee = "^3.14.10"
DateTime = "^4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
